Fix vocab-header alignment.

--- a/src/stylesheets/components/_vocab.scss
+++ b/src/stylesheets/components/_vocab.scss
@@ -15,6 +15,7 @@
 
   .vocab-header {
     margin-bottom: $space-sm;
+    padding: 0 $space-xs;
   }
 
   .vocab-heading {
